# PRIVAdex

./: .e2e.env  .gitignore  ARCHITECTURE.md  BENCHMARK.md  CMakeLists.txt  DARKPOOL_SPEC.md  DARKPOOL_SPEC_v2.md  Makefile  PROJECT_STATE.md  README.md  build-dapp.sh  dApp_SUBMISSION.md  hardhat.config.js  package-lock.json  package.json  settlement_config.example.json
benchmarks/: CMakeLists.txt  engine_bench.cpp
compiler/: gen_pool_keys.py
contracts/: DarkPoolSettlement.sol  PrivaDEXDarkPool.fhEVM.sol  deploy_settlement.py
evidence/: ctest_output.txt  ctest_summary.md  fhevm_migration_notes.md  match_latency_breakdown.csv  mev_surface_analysis.md  sign_poly_ablation.csv
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/components/: Navbar.tsx
frontend/pages/: _app.tsx  architecture.tsx  benchmark.tsx  index.tsx  settlement.tsx
frontend/pages/api/: submit-order.ts
he_core/include/: bfv_context_dp.h  bfv_equality_eval.h  ckks_context_dp.h  hoisted_tree_sum_dp.h  order_encoder.h  sign_poly_eval.h  slot_blinding.h
he_core/src/: bfv_context_dp.cpp  bfv_equality_eval.cpp  ckks_context_dp.cpp  hoisted_tree_sum_dp.cpp  order_encoder.cpp  sign_poly_eval.cpp  slot_blinding.cpp
matching_server/include/: matching_server.h  seal_serialization.h  sqlite3_compat.h
matching_server/src/: concurrent_submit_test.cpp  matching_server.cpp  matching_server_test.cpp  seal_serialization.cpp  server_main.cpp
proto/: darkpool.proto
scripts/: bridge_settler.py  deploy_fhevm_local.py  deploy_settlement_devnet.js  verify_cadence.py
test/: mock_match.json
tests/: CMakeLists.txt  smoke_test.cpp  test_darkpool.cpp  test_e2e_settlement.py  validate_sign_coeffs.py
trader_client/: __init__.py  order_nonce_store.py  proto_runtime.py  settle_bridge.py  smoke_test_trader.py  test_settle_bridge.py  test_submit_order.py  trader_client.py
trader_client/_generated/: darkpool_pb2.py  darkpool_pb2_grpc.py
trader_client/backend/: load_wrapper.py  seal_wrapper_dp.cpp  setup_seal_wrapper.py
